--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 	<h3>Welcome to PAWM</h3>
-	<p>Input your pin then phone number</p>
+	<p>To learn more <a href="./process/info">click here</a>
+	 <br>Input your pin then phone number</p>
 	<form action="./process/aj85gxjimlp0875fsbbj4532sfy" method="post">
 		<fieldset>
 			<label>Pin</label>
